--- a/src/components/Message/Message.module.scss
+++ b/src/components/Message/Message.module.scss
@@ -1,3 +1,5 @@
+@import "../../data/colors.module.scss";
+
 .messageBox {
   display: flex;
   flex-direction: column;
@@ -6,6 +8,6 @@
   .error {
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
       "Lucida Sans", Arial, sans-serif;
-    color: #d84727;
+    color: $chilli;
   }
 }
