--- a/src/components/Searchbar/Searchbar.module.scss
+++ b/src/components/Searchbar/Searchbar.module.scss
@@ -1,5 +1,7 @@
+@import "../../data/colors.module.scss";
+
 .Searchbar {
-  background-color: #042a2b;
+  background-color: $ink;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +14,7 @@
     padding: 0px 10px;
   }
   .searchButton {
-    background-color: #ef7b45;
+    background-color: $orange;
     border: none;
     color: white;
     font-size: 1.2em;
@@ -21,7 +23,7 @@
     border-radius: 5px;
     margin-bottom: 30px;
     &:hover {
-      background-color: #bd5d30;
+      background-color: $chilli;
       transform: scale(1.1);
     }
   }
