--- a/src/components/CatalogueBody/CatalogueBody.module.scss
+++ b/src/components/CatalogueBody/CatalogueBody.module.scss
@@ -1,7 +1,11 @@
 @import "../../colors.module.scss";
 
-.list {
+.body {
   background-color: $cyan;
   display: flex;
+  flex-direction: row;
   padding: 50px;
+  gap: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
