--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../colors.module.scss";
+@import "../../scss/colors";
 
 .card {
   background-color: $ink;
@@ -21,12 +21,16 @@
   .author {
     padding-bottom: 0px;
     font-size: 1em;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
   }
   .rating {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
     align-self: center;
+    font-size: 0.8em;
     .stars {
       display: flex;
       flex-direction: row;
@@ -38,11 +42,11 @@
 
   .more {
     align-self: center;
-    color: $orange;
+    color: $moonstone;
 
     padding-bottom: 20px;
     &:hover {
-      color: $chilli;
+      color: $orange;
       transform: scale(1.02);
     }
   }
