--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -16,7 +16,8 @@
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 25px;
+    margin: auto;
   }
   .author {
     padding-bottom: 0px;
@@ -24,6 +25,8 @@
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
+    margin-top: 10px;
+    font-weight: 300;
   }
   .rating {
     display: flex;
@@ -31,6 +34,11 @@
     gap: 10px;
     align-self: center;
     font-size: 0.8em;
+
+    .ratingNumbers {
+      font-weight: 300;
+      margin: auto;
+    }
     .stars {
       display: flex;
       flex-direction: row;
@@ -43,8 +51,10 @@
   .more {
     align-self: center;
     color: $moonstone;
+    margin: auto;
+    padding-top: 30px;
 
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     &:hover {
       color: $orange;
       transform: scale(1.02);
@@ -52,7 +62,7 @@
   }
 
   .cover {
-    width: 90%;
+    width: 65%;
     align-self: center;
     padding-top: 20px;
   }
