--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,5 +13,14 @@
     font-family: "Merriweather Sans";
     padding: 30px;
     font-weight: 800;
+    font-size: 2.3em;
+  }
+  .subheading {
+    margin: auto;
+    color: $cyan;
+    font-family: "Merriweather Sans";
+    padding-top: 0px;
+    padding-bottom: 20px;
+    font-weight: 400;
   }
 }
